Fixing Vertical Spacing and Progress Bar

--- a/src/views/Portal/components/ApplicationForm/Connected/index.scss
+++ b/src/views/Portal/components/ApplicationForm/Connected/index.scss
@@ -18,4 +18,7 @@
     @include typography.form-component-width;
   }
 
+  &__field {
+      @include typography.form-page-container-vertical-spacing;
+  }
 }
